--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "twitter-api-v2": "^1.23.2",
-    "zod": "^3.25.20"
+    "zod": "^3.25.20",
+    "node-fetch": "^3.3.2",
+    "unfluff": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
